--- a/src/app/main-list/main-list.component.html
+++ b/src/app/main-list/main-list.component.html
@@ -1,47 +1,19 @@
 <div class="card">
     <div class="card-body">
-        <h2>Task List</h2>
 
-        <div class="filter-sort-container">
-            <label>Status:</label>
-            <select [(ngModel)]="statusFilter" (change)="filterTasks()">
-                <option value="">All</option>
-                <option value="Pending">Pending</option>
-                <option value="In Progress">In Progress</option>
-                <option value="Done">Done</option>
-              </select>
-      
-              <label>Due Date:</label>
-              <input type="date" [(ngModel)]="dueDateFilter" (change)="filterTasks()">
-        </div>
-          
 
-        <table class="table task_listTable">
-            <thead>
-                <tr>
-                    <!-- <th></th> -->
-                    <th>Sr. No.</th>
-                    <th>Project Name</th>
-                    <th>Status</th>
-                    <th>Start Date</th>
-                    <th>Due Date</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of filteredTaskList; let i = index;">
-                    <td>{{i+1}}</td>
-                    <td>{{item.title}}</td>
-                    <td>{{item.status}}</td>
-                    <td>{{item.StartDate}}</td>
-                    <td>{{item.dueDate | date: 'dd-MMM-yyyy'}}</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="project-list">
+            <h2>Project List</h2>
+            <ul>
+              <li *ngFor="let project of projects">
+                <span [routerLink]="['/edit-list', project.id]">{{ project.name }}</span>
+                <span [routerLink]="['/edit-list', project.id]">{{ project.description }}</span>
+                <span [routerLink]="['/edit-list', project.id]">{{ project.startDate | date }}</span>
+                <span [routerLink]="['/edit-list', project.id]">{{ project.endDate | date }}</span>
+              </li>
+            </ul>
+          </div>
 
         
-        <div class="saveDiv">
-            <app-button [label]="'Add or Edit Details'" (onClick)="showDetails()"></app-button>
-        </div>
-
     </div>
 </div>
