--- a/src/app/edit-list/edit-list.component.scss
+++ b/src/app/edit-list/edit-list.component.scss
@@ -5,3 +5,10 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
+
+  .AddTaskDiv{
+    display: flex;
+    justify-content: end;
+    gap:20px;
+    align-items: self-end;
+  }
