--- a/src/app/main-list/main-list.component.html
+++ b/src/app/main-list/main-list.component.html
@@ -5,11 +5,11 @@
         <div class="project-list">
             <h2>Project List</h2>
             <ul>
-              <li *ngFor="let project of projects">
-                <span [routerLink]="['/edit-list', project.id]">{{ project.name }}</span>
-                <!-- <span [routerLink]="['/edit-list', project.id]">{{ project.description }}</span> -->
-                <span [routerLink]="['/edit-list', project.id]">{{ project.startDate | date }}</span>
-                <span [routerLink]="['/edit-list', project.id]">{{ project.endDate | date }}</span>
+              <li *ngFor="let project of projects" [routerLink]="['/edit-list', project.id]" class="cursor-pointer">
+                <span >{{ project.name }}</span>
+                <span >{{ project.description }}</span>
+                <span >{{ project.startDate | date }}</span>
+                <span >{{ project.endDate | date }}</span>
               </li>
             </ul>
           </div>
