--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,3 +70,7 @@ input[type="text"],input[type="date"], select{
     border-radius: 10px;
     border: 1px solid #cccccc;
 }
+
+.cursor-pointer{
+    cursor: pointer;
+}
