added styling and condition statement to main-list

--- a/src/app/edit-list/edit-list.component.html
+++ b/src/app/edit-list/edit-list.component.html
@@ -23,7 +23,7 @@
             <span *ngIf="task.assignedTo"> Assigned User : {{ task.assignedTo.name }}</span>
           </li>
         </ul>
-        <p>Project Progress: {{ project.progress }}%</p>
+        <p><strong> Project Progress:  {{ project.progress }}% </strong></p>
 
         <div class="AddTaskDiv">
             <div class="addrowDiv">
