--- a/src/app/main-list/main-list.component.html
+++ b/src/app/main-list/main-list.component.html
@@ -12,6 +12,10 @@
                 <span >{{ project.endDate | date }}</span>
               </li>
             </ul>
+
+            <div class="condition">
+                **click on project Row to show the Details of the Project
+            </div>
           </div>
 
         
