--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,3 +74,11 @@ input[type="text"],input[type="date"], select{
 .cursor-pointer{
     cursor: pointer;
 }
+
+.condition{
+    display: flex;
+    justify-content: end;
+    gap:20px;
+    align-items: self-end;
+    font-size: 14px;
+}
